# code-review-env

./: .dockerignore  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  __init__.py  baseline.py  client.py  dataset.py  eval_live.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-research.txt  requirements.txt  research_note.md  reward.py  snippet_bank.py  test_inference.sh  train_world_model.py  validate.py
analysis/: __init__.py  agent_profiler.py
baseline/: heuristic_results.json  live_results.json  results.json  run_baseline.py  world_model_results.json
benchmark/: __init__.py  agents.py  protocol.py
env/: __init__.py  base.py  data_generator.py  models.py  trajectory_logger.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py  reliability.py
paper/: outline.md
server/: __init__.py  app.py  code_executor.py  code_review_environment.py  gradio_ui.py
static/: index.html
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_code_review_env.py  test_env.py
trajectories/: sample_trajectory.jsonl
world_model/: __init__.py  scaffold.py
